--- a/site2.html
+++ b/site2.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Mayak Garg</h1>
+    <h2>Mayank Garg</h2>
+    <h3>Mayank Garg</h3>    
+    <h4>Mayank Garg</h4>    
+    <h5>Mayank Garg</h5>    
+    <h6>Mayank Garg</h6>    
+
 </body>
 </html>
