--- a/site1.html
+++ b/site1.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Mayank Garg</h1>
+    <h2>Mayank Garg</h2>
+    <h3>Mayank Garg</h3>    
+    <h4>Mayank Garg</h4>    
+    <h5>Mayank Garg</h5>    
+    <h6>Mayank Garg</h6> 
 </body>
 </html>
